fixing safari flexbox-gap

--- a/css/queries.css
+++ b/css/queries.css
@@ -127,7 +127,10 @@
 
   .main-nav {
     position: absolute;
-    background-color: aliceblue;
+    backdrop-filter: blur(10px);
+    /* safari doesnt supports =>webkit */
+    -webkit-backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.453);
     top: 0;
     left: 0;
     width: 100%;
@@ -266,4 +269,57 @@
 .gallery {
   gap: 0.6rem;
   grid-template-columns: repeat(3, 1fr);
+}
+
+/*********************************/
+/* FIXING SAFARI FLEXBOX-GAP */
+/*********************************/
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
+  }
 }
